Closed
Bug 1492769
Opened 6 years ago
Closed 6 years ago
Fix a cookie policy range check in CookieServiceChild
Categories
(Core :: Networking: Cookies, defect)
Core
Networking: Cookies
Tracking
()
RESOLVED
FIXED
mozilla64
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | fixed |
firefox64 | --- | fixed |
People
(Reporter: baku, Assigned: baku)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.00 KB,
patch
|
ehsan.akhgari
:
review+
pascalc
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
https://searchfox.org/mozilla-central/rev/94e37e71ffbfd39e6ad73ebcda5d77cce8d341ae/netwerk/cookie/CookieServiceChild.cpp#304-307
This check is wrong because it doesn't consider the new BEHAVIOR_REJECT_TRACKER policy.
Assignee | ||
Comment 1•6 years ago
|
||
Attachment #9010561 -
Flags: review?(ehsan)
Comment 2•6 years ago
|
||
Comment on attachment 9010561 [details] [diff] [review]
fix.patch
Review of attachment 9010561 [details] [diff] [review]:
-----------------------------------------------------------------
Please request uplift as well.
Attachment #9010561 -
Flags: review?(ehsan) → review+
Updated•6 years ago
|
Blocks: 1480780
Keywords: regression
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5d99742ecb5f
Fix a cookie policy range check in CookieServiceChild, r=ehsan
Assignee | ||
Comment 4•6 years ago
|
||
Comment on attachment 9010561 [details] [diff] [review]
fix.patch
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1480780
[User impact if declined]: Wrong cookie policy can be applied when retrieving/setting cookies. In particular the new cookie policy 4 is ignored.
[Is this code covered by automated tests?]: n/a
[Has the fix been verified in Nightly?]: n/a
[Needs manual test from QE? If yes, steps to reproduce]: n/a
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: none
[Why is the change risky/not risky?]: it's just a range check.
[String changes made/needed]: none
Attachment #9010561 -
Flags: approval-mozilla-beta?
Comment 5•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment 6•6 years ago
|
||
Comment on attachment 9010561 [details] [diff] [review]
fix.patch
Minimal patch fixing a well defined bug, uplift approved for 63 beta 9, thanks.
Attachment #9010561 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•6 years ago
|
||
bugherder uplift |
status-firefox63:
--- → fixed
Updated•6 years ago
|
status-firefox62:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•