Bug 1492769 - Fix a cookie policy range check in CookieServiceChild, r=ehsan a=pascalc